--- a/app/src/main/res/layout/activity_funny_story.xml
+++ b/app/src/main/res/layout/activity_funny_story.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FunnyStory"
-    android:background="">
+    android:background="#FFE1B5">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,9 +14,11 @@
 
         <TextView
             android:id="@+id/funny_story_title"
-            android:layout_width="142dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="#E8826F"
             android:text="Funny Story"
+            android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="25sp" />
 
@@ -130,43 +132,50 @@
                     android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""
+                    android:textColor="@android:color/black"/>
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""
+                    android:textColor="@android:color/black"/>
 
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""
+                    android:textColor="@android:color/black"/>
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""
+                    android:textColor="@android:color/black"/>
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""
+                    android:textColor="@android:color/black"/>
 
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""
+                    android:textColor="@android:color/black"/>
 
                 <TextView
                     android:id="@+id/textView7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="" />
+                    android:text=""
+                    android:textColor="@android:color/black"/>
             </LinearLayout>
         </ScrollView>
 
