--- a/app/src/main/res/layout/activity_scary_story.xml
+++ b/app/src/main/res/layout/activity_scary_story.xml
@@ -33,7 +33,7 @@
                     android:layout_height="67dp"
                     android:layout_marginTop="24dp"
                     android:ems="10"
-                    android:hint="Enter Pronoun"
+                    android:hint="Enter Adjective"
                     android:inputType="textPersonName" />
 
                 <EditText
@@ -41,7 +41,7 @@
                     android:layout_width="330dp"
                     android:layout_height="67dp"
                     android:ems="10"
-                    android:hint="Enter "
+                    android:hint="Enter A Person's Name "
                     android:inputType="textPersonName" />
 
                 <EditText
@@ -49,7 +49,7 @@
                     android:layout_width="330dp"
                     android:layout_height="67dp"
                     android:ems="10"
-                    android:hint="Enter"
+                    android:hint="Enter Adjective"
                     android:inputType="textPersonName" />
 
                 <EditText
@@ -57,7 +57,7 @@
                     android:layout_width="330dp"
                     android:layout_height="67dp"
                     android:ems="10"
-                    android:hint="Enter"
+                    android:hint="Enter Noun"
                     android:inputType="textPersonName" />
 
                 <EditText
@@ -65,7 +65,7 @@
                     android:layout_width="330dp"
                     android:layout_height="67dp"
                     android:ems="10"
-                    android:hint="Enter"
+                    android:hint="Enter Verb"
                     android:inputType="textPersonName" />
 
                 <EditText
@@ -73,7 +73,7 @@
                     android:layout_width="330dp"
                     android:layout_height="67dp"
                     android:ems="10"
-                    android:hint="Enter"
+                    android:hint="Enter Animal Name"
                     android:inputType="textPersonName" />
 
                 <EditText
@@ -81,7 +81,7 @@
                     android:layout_width="330dp"
                     android:layout_height="67dp"
                     android:ems="10"
-                    android:hint="Enter"
+                    android:hint="Enter Verb Ending in 'ing'"
                     android:inputType="textPersonName" />
 
                 <EditText
@@ -89,15 +89,16 @@
                     android:layout_width="330dp"
                     android:layout_height="67dp"
                     android:ems="10"
-                    android:hint="Enter"
+                    android:hint="Enter Adverb"
                     android:inputType="textPersonName" />
+
 
                 <EditText
                     android:id="@+id/SS_editText9"
                     android:layout_width="330dp"
                     android:layout_height="67dp"
                     android:ems="10"
-                    android:hint="Enter"
+                    android:hint="Enter Noun"
                     android:inputType="textPersonName" />
 
                 <EditText
@@ -105,14 +106,64 @@
                     android:layout_width="330dp"
                     android:layout_height="67dp"
                     android:ems="10"
-                    android:hint="Enter"
-                    android:inputType="textPersonName" />
+                    android:hint="Enter Verb Ending in 'ing'"
+                    android:inputType="textPersonName"
+                    />
+
+                <EditText
+                    android:id="@+id/SS_editText11"
+                    android:layout_width="330dp"
+                    android:layout_height="67dp"
+                    android:ems="10"
+                    android:hint="Enter Plural Noun"
+                    android:inputType="textPersonName"
+                    />
+
+                <EditText
+                    android:id="@+id/SS_editText12"
+                    android:layout_width="330dp"
+                    android:layout_height="67dp"
+                    android:ems="10"
+                    android:hint="Enter Verb Ending in 'ing'"
+                    android:inputType="textPersonName"
+                    />
 
                 <Button
                     android:id="@+id/SS_submit_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="submit"
                     android:text="@string/submit" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="330dp"
+                    android:layout_height="67dp"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="330dp"
+                    android:layout_height="67dp"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="330dp"
+                    android:layout_height="67dp"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="330dp"
+                    android:layout_height="67dp"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/textView12"
+                    android:layout_width="330dp"
+                    android:layout_height="67dp"
+                    android:text="" />
             </LinearLayout>
         </ScrollView>
 
