--- a/app/src/main/res/layout/activity_scary_story.xml
+++ b/app/src/main/res/layout/activity_scary_story.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScaryStory">
+    tools:context=".ScaryStory"
+    android:background="#E1E9FD">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,10 +14,13 @@
 
         <TextView
             android:id="@+id/scary_story_title"
-            android:layout_width="130dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="#5D88FF"
             android:text="@string/scary_story"
-            android:textSize="25sp" />
+            android:textAlignment="center"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -136,34 +140,54 @@
                     android:text="@string/submit" />
 
                 <TextView
+                    android:id="@+id/scary_madlib_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="61dp"
+                    android:gravity="center"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="25sp" />
+
+                <TextView
                     android:id="@+id/textView8"
-                    android:layout_width="330dp"
-                    android:layout_height="67dp"
-                    android:text="" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"/>
 
                 <TextView
                     android:id="@+id/textView9"
-                    android:layout_width="330dp"
-                    android:layout_height="67dp"
-                    android:text="" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"/>
 
                 <TextView
                     android:id="@+id/textView10"
-                    android:layout_width="330dp"
-                    android:layout_height="67dp"
-                    android:text="" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"/>
 
                 <TextView
                     android:id="@+id/textView11"
-                    android:layout_width="330dp"
-                    android:layout_height="67dp"
-                    android:text="" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"/>
 
                 <TextView
                     android:id="@+id/textView12"
-                    android:layout_width="330dp"
-                    android:layout_height="67dp"
-                    android:text="" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"/>
+
             </LinearLayout>
         </ScrollView>
 
